--- a/views/mypageChallenge.ejs
+++ b/views/mypageChallenge.ejs
@@ -133,8 +133,8 @@ body {
                                 <div class="tab-pane fade" id="zxc">
                                     <div class="px-4 py-5 my-5 text-center">
                                         <div class="col-lg-10 mx-auto">
-                                            <table class="table">
-                                                <tr>
+                                          <table class="table table-hover table-striped" >
+                                                <tr class="table-dark">
                                                   <th scope="col">번호</th>
                                                   <th scope="col">챌린지명</th>
                                                   <th scope="col">제목</th>
