--- a/views/board.ejs
+++ b/views/board.ejs
@@ -7,39 +7,53 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="px-4 py-5 my-5 text-center">
-      <button type="button"  onclick="location.href=''">상세</button>
-      <button type="button"  onclick="location.href='/challenge/<%=challenge_uid%>/proof'">인증</button>
-      <button type="button"  onclick="location.href='/challenge/<%=challenge_uid%>/board'">게시판</button>
-        <div class="col-lg-10 mx-auto">
-            <button type="button"  onclick="location.href='/challenge/<%=challenge_uid%>/board/post'">작성</button>
-            <div>
-              <table>
-                <tr>
-                  <th scope="col">번호</th>
-                  <th scope="col">제목</th>
-                  <th scope="col">일자</th>
-                  <th scope="col">작성자</th>
-                </tr>
-                <%
-                for(var i = 0; i<board_info.length; i++)
-                {
-                %>
-                <tr>
-                  <td><%=i+1%></td>
-                  <td><a href="/challenge/<%=challenge_uid%>/board/<%=board_info[i].post_uid%>"><%=board_info[i].post_title%></a></td>
-                  <td><%=board_info[i].post_create_date%></td>
-                  <td><%=board_info[i].user_uid%></td>
-                </tr>
-                <%
-                }
-                %> 
-              </table>
-               
-            </div>
-          
+  <div class=container>
+
+    <img src="<%=challenge[0].challenge_image%>" width=100% height=400>
+  
+    <ul class="nav nav-tabs" style='text-align: center'>
+        <li class="nav-item" style='width: 33%'>
+          <a class="nav-link" href="/challenge/<%=challenge_uid%>">소개</a>
+        </li>
+        <li class="nav-item" style='width: 33%'>
+          <a class="nav-link" href="/challenge/<%=challenge_uid%>/proof">인증</a>
+        </li>
+        <li class="nav-item" style='width: 33%'>
+          <a class="nav-link active" aria-current="page" href="#">커뮤니티</a>
+        </li>
+    </ul>
+      <div class="mt-3">
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-3">
+          <button class="btn btn-primary me-md-2" type="button" onclick="location.href='/challenge/<%=challenge_uid%>/board/post'">작성</button>
         </div>
-        
+          <div class='mt-3'>
+
+            <table class="table table-hover table-striped" >
+              <tr class="table-dark">
+                <th scope="col">번호</th>
+                <th scope="col">챌린지명</th>
+                <th scope="col">작성자</th>
+                <th scope="col">작성일자</th>
+              </tr>
+              <%
+              for(var i = 0; i<board_info.length; i++)
+              {
+              %>
+              <tr>
+                <td><%=i+1%></td>
+                <td><a href="/challenge/<%=challenge_uid%>/board/<%=board_info[i].post_uid%>"><%=board_info[i].post_title%></a></td>
+                <td><%=board_info[i].user_uid%></td>
+                <td><%=board_info[i].post_create_date%></td>
+              </tr>
+              <%
+              }
+              %>
+            </table>
+            
+        </div>
+          
     </div>
+        
+    
 </body>
 </html>
