--- a/views/insertChallenge.ejs
+++ b/views/insertChallenge.ejs
@@ -8,39 +8,79 @@
     <title>Document</title>
 </head>
 <body>
-    <form class = "login-form" action='/create' method='post' enctype="multipart/form-data">
-        <div class="login-page" style="margin-top: 8%;">
-            <div class="form">
-                <div>
-                    챌린지 이름  <input type="text" name='name'>
-                </div>
-                <div>
-                    시작 날짜  <input type="text" name='start_date'>
-                </div>
-                <div>
-                    종료 날짜  <input type="text" name='end_date'>
-                </div>
-                <div>
-                    클래스 내용  <input type="text" name='content'>
-                </div>
-                <div>
-                    인증 방법  <input type="text" name='proof'>
-                </div>
-                <div>
-                    INTEREST  <select type="text" name='type'>
+    <div class="row" style="margin-top: 7%;">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h2 class="text-center">챌린지 등록</h2>
+            <form action="/create" method="post" enctype="multipart/form-data">
+              <table class="table table-striped">
+                <tr>
+                    <td>챌린지 이름</td>
+                    <td><input type="text"  class="form-control" name="name"></td>
+                </tr>
+                <tr>
+                    <td>카테고리</td>
+                    <td><select type="text" name='type' style="width:100%;">
                         <option value="1">운동</option>
                         <option value="2">요리</option>
                         <option value="3">음악</option>
                         <option value="4">기타</option>
-                    </select>
-                </div>
-            <div>
-                
-                파일 첨부  <input type="file" name='image'>
-            </div>
-            <button type="submit" class="btn btn-outline-dark">개설</button>
-            
+                        <option value="4">외국어</option>
+                        <option value="4">생활습관</option>
+                        <option value="4">돈관리</option>
+                        <option value="4">공부</option>
+                    </select></td>
+                </tr>
+                <tr>
+                    <td>인증 방법</td>
+                    <td><input type="text"  class="form-control" name="proof"></td>
+                </tr>
+
+                <tr>
+                    <td>시작 날짜</td>
+                    <td><input type="text"  class="form-control" name="start_date"></td>
+                </tr>
+
+                <tr>
+                    <td>종료 날짜</td>
+                    <td><input type="text"  class="form-control" name="end_date"></td>
+                </tr>
+                 
+                <tr>
+                    <td>챌린지 내용</td>
+                    <td><textarea rows="10" cols="50" name="content" class="form-control"></textarea></td>
+                </tr>
+                <tr>
+                    <td>파일 첨부</td>
+                    <td><input type="file" name='image'></td>
+                </tr>
+
+
+                <tr>
+                     
+                    <td colspan="2"  class="text-center">
+                        <input type="submit" value="개설" class="btn btn-secondary">
+                    </td>
+                </tr>
+                 
+              </table>
+            </form>
         </div>
     </div>
+     
+     
+    <jsp:include page="Bottom.jsp"/>
+     
+     
+    <script>
+    //CKEDITOR 적용 
+    CKEDITOR.replace('content', {
+             
+        width:'100%',
+        height:'350'
+             
+    });
+     
+    </script>
 </body>
 </html>
