--- a/views/insertProof.ejs
+++ b/views/insertProof.ejs
@@ -7,19 +7,47 @@
     <title>Document</title>
 </head>
 <body>
-    <form action='/challenge/<%=challenge_uid%>/insert' method='post'  enctype="multipart/form-data">
-        <div style="margin-top: 8%;">
-            <div class="form">
-                <div>
-                    파일 첨부  <input type="file" name='image'>
-                </div>
-                <div>
-                    내용  <input type="text" name='content'>
-                </div>
-            <button type="submit" class="btn btn-outline-dark">등록</button>
-            
+    <div class="row" style="margin-top: 7%;">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h2 class="text-center">챌린지 인증</h2>
+            <form action='/challenge/<%=challenge_uid%>/insert' method='post'  enctype="multipart/form-data">
+              <table class="table table-striped">
+
+                <tr>
+                    <td>파일 첨부</td>
+                    <td><input type="file" name='image'></td>
+                </tr>
+                    <td>챌린지 내용</td>
+                    <td><textarea rows="10" cols="50" name="content" class="form-control"></textarea></td>
+                </tr>
+
+
+                <tr>
+                     
+                    <td colspan="2"  class="text-center">
+                        <input type="submit" value="인증" class="btn btn-secondary">
+                    </td>
+                </tr>
+                 
+              </table>
+            </form>
         </div>
     </div>
-    </form>
+     
+     
+    <jsp:include page="Bottom.jsp"/>
+     
+     
+    <script>
+    //CKEDITOR 적용 
+    CKEDITOR.replace('content', {
+             
+        width:'100%',
+        height:'350'
+             
+    });
+     
+    </script>
 </body>
 </html>
