인증, 게시글 UI 수정

--- a/views/insertChallenge.ejs
+++ b/views/insertChallenge.ejs
@@ -13,7 +13,7 @@
         <div class="col-md-8">
             <h2 class="text-center">챌린지 등록</h2>
             <form action="/create" method="post" enctype="multipart/form-data">
-              <table class="table table-striped">
+              <table class="table">
                 <tr>
                     <td>챌린지 이름</td>
                     <td><input type="text"  class="form-control" name="name"></td>
@@ -25,10 +25,10 @@
                         <option value="2">요리</option>
                         <option value="3">음악</option>
                         <option value="4">기타</option>
-                        <option value="4">외국어</option>
-                        <option value="4">생활습관</option>
-                        <option value="4">돈관리</option>
-                        <option value="4">공부</option>
+                        <option value="5">외국어</option>
+                        <option value="6">생활습관</option>
+                        <option value="7">돈관리</option>
+                        <option value="8">공부</option>
                     </select></td>
                 </tr>
                 <tr>
