--- a/views/insertPost.ejs
+++ b/views/insertPost.ejs
@@ -7,22 +7,51 @@
     <title>Document</title>
 </head>
 <body>
-    <form action='/challenge/<%=challenge_uid%>/board/post' method='post'  enctype="multipart/form-data">
-        <div style="margin-top: 8%;">
-            <div class="form">
-                <div>
-                    제목 <input type="text" name='post_title'>
-                </div>
-                <div>
-                    내용  <input type="text" name='post_content'>
-                </div>
-                <div>
-                    파일 첨부  <input type="file" name='post_image'>
-                </div>
-            <button type="submit">등록</button>
-            
-            </div>
+    <div class="row" style="margin-top: 7%;">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h2 class="text-center">게시글 작성</h2>
+            <form action='/challenge/<%=challenge_uid%>/board/post' method='post'  enctype="multipart/form-data">
+              <table class="table">
+
+                <tr>
+                    <td>제목</td>
+                    <td><input type="text"  class="form-control" name="post_title"></td>
+                </tr>
+                <tr>
+                    <td>내용</td>
+                    <td><textarea rows="10" cols="50" name="content" class="form-control"></textarea></td>
+                </tr>
+                <tr>
+                    <td>파일 첨부</td>
+                    <td><input type="file" name='post_image'></td>
+                </tr>
+
+                <tr>
+                     
+                    <td colspan="2"  class="text-center">
+                        <input type="submit" value="등록" class="btn btn-secondary">
+                    </td>
+                </tr>
+                 
+              </table>
+            </form>
         </div>
-    </form>
+    </div>
+     
+     
+    <jsp:include page="Bottom.jsp"/>
+     
+     
+    <script>
+    //CKEDITOR 적용 
+    CKEDITOR.replace('content', {
+             
+        width:'100%',
+        height:'350'
+             
+    });
+     
+    </script>
 </body>
 </html>
