--- a/views/insertProof.ejs
+++ b/views/insertProof.ejs
@@ -12,7 +12,7 @@
         <div class="col-md-8">
             <h2 class="text-center">챌린지 인증</h2>
             <form action='/challenge/<%=challenge_uid%>/insert' method='post'  enctype="multipart/form-data">
-              <table class="table table-striped">
+              <table class="table">
 
                 <tr>
                     <td>파일 첨부</td>
