--- a/views/category.ejs
+++ b/views/category.ejs
@@ -38,12 +38,12 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-2">
-                <img class="card-img-top" src="<%=challenge[i].challenge_image%>">
+                <img class="card-img-top" src="<%=challenge[i].challenge_image%>" width="100%" height="300">
                 <div class="card-body">
                   <h4 class="card-title"><%=challenge[i].challenge_title%></h4>
                   <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p> -->
-                  <a class="btn btn-primary">상세보기</a>
+                  <a class="btn btn-primary"href="/challenge/<%=challenge[i].challenge_uid%>">상세보기</a>
                 </div>
               </div>
             </div>
@@ -51,12 +51,12 @@
             <% if(challenge[++i]) { %>
               <div class="col-md-4 clearfix d-none d-md-block">
                 <div class="card mb-2">
-                  <img class="card-img-top" src="<%=challenge[i].challenge_image%>">
+                  <img class="card-img-top" src="<%=challenge[i].challenge_image%>" width="100%" height="300" >
                   <div class="card-body">
                     <h4 class="card-title"><%=challenge[i].challenge_title%></h4>
                     <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p> -->
-                    <a class="btn btn-primary">상세보기</a>
+                    <a class="btn btn-primary"href="/challenge/<%=challenge[i].challenge_uid%>">상세보기</a>
                   </div>
                 </div>
               </div>
@@ -65,12 +65,12 @@
             <% if(challenge[++i]){%>
             <div class="col-md-4 clearfix d-none d-md-block">
               <div class="card mb-2">
-                <img class="card-img-top" src="<%=challenge[i].challenge_image%>" >
+                <img class="card-img-top" src="<%=challenge[i].challenge_image%>" width="100%" height="300" >
                   <div class="card-body">
                     <h4 class="card-title"><%=challenge[i].challenge_title%></h4>
                     <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p> -->
-                    <a class="btn btn-primary">상세보기</a>
+                    <a class="btn btn-primary"href="/challenge/<%=challenge[i].challenge_uid%>">상세보기</a>
                 </div>
               </div>
             </div>
