게시글 ui변경

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,43 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+  <head>
+
+    <!-- head -->
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+  </head>
 <body>
-    <div>
-        <%=detail_info[0].post_title%>
-    </div>
+
+<div class='container mt-5'>
+    <br>
+    <table class="table mt-5">
+        <thead></thead>
+        <tbody>
+            <tr>
+                <td width='20%' style="background-color: rgb(223, 223, 223);">제목</td>
+                <td style='text-align:left;'>  <%=detail_info[0].post_title%></td>
+            </tr>
+            <tr>
+                <td width='20%' style="background-color: rgb(223, 223, 223);">작성자</td>
+                <td style='text-align:left;'>  <%=detail_info[0].user_uid%></td>
+            </tr>
+            <tr>
+                <td width='20%' style="background-color: rgb(223, 223, 223);">작성일자</td>
+                <td style='text-align:left;'>  <%=detail_info[0].post_create_date%></td>
+            </tr>
+        </tbody>
+    </table>
     <div>
         <img src="<%=detail_info[0].post_image%>"/>
     </div>
-    <div>
+    <div style="text-align:left;">
         <%=detail_info[0].post_content%>
     </div>
-    <div>
-        <%=detail_info[0].post_create_date%>
-    </div>
-    <div>
-        <%=detail_info[0].user_uid%>
-    </div>
 
-    <div>
+    <div class='mt-5'>
         <form action="/challenge/<%=challenge_uid%>/board/<%=detail_info[0].post_uid%>/comment" method="post"> 
-            <table>
+            <table class='table'>
                 <tr>
-                    <th><input type="text" name="comment_content"></th>
-                    <th><button type="submit" >작성</button></th>
+                    <td><input type="text" class="form-control" name="comment_content"></td>
+                    <td><button type="submit" class='btn btn-primary'>작성</button></td>
                 </tr>
             </table>
         </form>
        
         
-        <table>
+        <table class='table'>
             <tr>
               <th scope="col">번호</th>
-              <th scope="col">내용</th>
+              <th scope="col" width='60%'>내용</th>
               <th scope="col">날짜</th>
               <th scope="col">작성자</th>
             </tr>
@@ -56,5 +72,17 @@
             %> 
           </table>
     </div>
-</body>
+</div>
+    <!-- bot -->
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+-->
+  </body>
 </html>
