--- a/views/insertPost.ejs
+++ b/views/insertPost.ejs
@@ -20,7 +20,7 @@
                 </tr>
                 <tr>
                     <td>내용</td>
-                    <td><textarea rows="10" cols="50" name="content" class="form-control"></textarea></td>
+                    <td><textarea rows="10" cols="50" name="post_content" class="form-control"></textarea></td>
                 </tr>
                 <tr>
                     <td>파일 첨부</td>
