--- a/views/proof.ejs
+++ b/views/proof.ejs
@@ -38,7 +38,9 @@
   <% for(let row of rows){ %>
 
   <div class="my-3 p-3 bg-light rounded shadow-sm">
+    
     <div style='display:flex; height:250px;'>
+      
         <div style='width:50%'>
             <img src="<%=row.proof_image%>" width=100% height=100%/>
         </div>
@@ -46,14 +48,17 @@
             <div style='margin-left:20px; text-align:left'>내용: <%=row.proof_content%></div>
             <small class="d-block text-end mt-3"><%=row.user_uid%></small>
             <small class="d-block text-end mt-3"><%=row.proof_create_date%></small>
+            <% if(session==challenge[0].challenge_creator&&row.proof_permit=='x'){%>
+              <td><button class="btn btn-primary me-md-2" style="margin-top:120px"  type="button"  onclick="location.href='/challenge/<%=challenge_uid%>/<%=row.user_uid%>/proof/permit'">인증</button></td>
+            <%}%>
         </div>
+        
     </div>
+    
+  
   </div>
 
-  <% if(session==challenge[0].challenge_creator&&row.proof_permit=='x'){%>
-    <td><button type="button"  onclick="location.href='/challenge/<%=challenge_uid%>/<%=row.user_uid%>/proof/permit'">인증</button></td>
-  <%}%>
-
+ 
   <% } %>
 
 </div>
